fix: adding write permissions to GH release action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,5 +103,7 @@ jobs:
         files: |
           TestResourceLoad/*.tar.gz
           TestResourceLoad/*.zip
+        permissions:
+          content: write
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
