fix: Permissions in the right place?

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -103,7 +103,7 @@ jobs:
         files: |
           TestResourceLoad/*.tar.gz
           TestResourceLoad/*.zip
-        permissions:
-          content: write
+      permissions:
+        contents: write
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
